# mathiavelli

./: .env.example  README.md  dev-run.bat  docker-compose.yml  index.html  style.css
server/: .env.example  .env.lan  .gitignore  Dockerfile  build.sh  pyproject.toml  requirements.txt
server/career/: admin.py  models.py  serializers.py  urls.py  viewsets.py
server/career/migrations/: 0001_initial.py  0002_remove_job_created_at_remove_job_updated_at.py  0003_followup_created_at_followup_updated_at_and_more.py  0004_alter_followup_created_at_alter_followup_updated_at_and_more.py
server/core/: admin.py  apps.py  fields.py  helpers.py  middleware.py  models.py  paginations.py  serializers.py  signals.py  urls.py  utils.py  views.py  viewsets.py
server/finance/: admin.py  analytics.py  models.py  serializers.py  urls.py  viewsets.py
server/health/: admin.py  analytics.py  apps.py  models.py  serializers.py  signals.py  urls.py  viewsets.py
server/issues/: admin.py  apps.py  models.py  serializers.py  signals.py  viewsets.py
server/myapp/: admin.py  analytics.py  apps.py  fields.py  helpers.py  models.py  paginations.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  views.py  viewsets.py
server/mysite/: settings.py  urls.py  utils.py  views.py
server/personal/: admin.py  models.py  serializers.py  urls.py  viewsets.py
server/productivity/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py  viewsets.py
server/travel/: admin.py  models.py  serializers.py  urls.py  viewsets.py
(+529 files in other folders)
